Referencias en documentos. [#13]

--- a/doc/proyectdoc/bibliografia.bib
+++ b/doc/proyectdoc/bibliografia.bib
@@ -4,7 +4,7 @@
 	urldate = {2018-01-04}
 }
 @book{claudia,
-		title = {{Memoria TFG, 2017 }},
+		title = {{Memoria tfg, 2017 }},
 	author    = "Martínez Herrero, Claudia"
 	title     = "Memoria tfg UBUGrades",
 	year      = "2017"
@@ -58,7 +58,12 @@
 	urldate = {2017-12-03}
 }
 @misc{Web:zenhub,
-	title = {ZenHub},
+	title = {zenhub},
+	url = {https://www.zenhub.com/faq},
+	urldate = {2017-12-03}
+}
+@misc{Web:zenhub,
+	title = {zenhub},
 	url = {https://www.zenhub.com/faq},
 	urldate = {2017-12-03}
 }
@@ -69,7 +74,7 @@
 	urldate = {2017-12-03}
 }
 @misc{Web:texstudio,
-	title = {{TexStudio}},
+	title = {{TeXstudio}},
 	url = {https://www.texstudio.org/},
 	urldate = {2017-12-03}
 }
@@ -83,7 +88,7 @@
 	year = {2017}
 }
 @misc{web:git,
-	title = {{Git - Documentati{\'{o}}n}},
+	title = {{Git - Documentation}},
 	url = {https://git-scm.com/doc},
 	urldate = {2017-12-03}
 }
@@ -115,7 +120,7 @@
 	url = {https://sonarcloud.io/dashboard?id=GII-17.1B-UBULog-1.0}
 }
 @misc{web:sublime,
-	title = {{Sublime Text 3 - IDE para JavaScript y HTML}},
+	title = {{Sublime Text 3 - IDE para javaScript y html}},
 	url = {https://www.sublimetext.com/3}
 }
 @misc{,
@@ -127,7 +132,7 @@
 	url = {https://docs.moodle.org/dev/Web{\_}service{\_}API{\_}functions}
 }
 @misc{javascript:chart,
-	title = {{Librería para generar los gráficos - Chart.js {\textperiodcentered} Documentaci{\'{o}}n}},
+	title = {{Libreria para generar los graficos - Chart.js {\textperiodcentered} Cocumentaci{\'{o}}n}},
 	url = {http://www.chartjs.org/docs/latest/}
 }
 @misc{java:calendar,
@@ -171,7 +176,7 @@ year = {2008}
 }
 @article{art:mvc,
 keywords = {wiki},
-title = {{Modelo vista controlador  — Wikipedia, La enciclopedia libre}},
+title = {{modelo vista controlador  — Wikipedia, La enciclopedia libre}},
 url = {https://es.wikipedia.org/wiki/Modelo–vista–controlador},
 year = {2017}
 }
