--- a/doc/proyectdoc/tex/A_Plan_proyecto.tex
+++ b/doc/proyectdoc/tex/A_Plan_proyecto.tex
@@ -167,7 +167,7 @@ Los objetivos fueron:
 	\item
 	Generar gráficas.
 	\item
-	Mostrar gráficas con char.js \cite{javascript:chart}
+	Mostrar gráficas con char.js \cite{javascript:chart}.
 	\item
 	Creación de botón para generar las gráficas.	
 	\item
