--- a/doc/proyectdoc/tex/B_Requisitos.tex
+++ b/doc/proyectdoc/tex/B_Requisitos.tex
@@ -24,7 +24,7 @@ En el desarrollo del proyecto se quieren conseguir los siguientes objetivos:
 
 \section{Catálogo de requisitos}
 
-Ahora hablaremos de los requisitos funcionales y no funcionales, derivados de los objetivos generales de este proyecto. Se notará que varios puntos del apartado son iguales al anexo del TFG de Claudia Martínez Herrero \cite{claudia:anexo}
+Ahora hablaremos de los requisitos funcionales y no funcionales, derivados de los objetivos generales de este proyecto. Se notará que varios puntos del apartado son iguales al anexo del TFG de Claudia Martínez Herrero \cite{claudia:anexo}.
 
 \subsection{Requisitos funcionales}\label{requisitos-funcionales}
 
