--- a/doc/proyectdoc/tex/C_Diseno.tex
+++ b/doc/proyectdoc/tex/C_Diseno.tex
@@ -101,11 +101,11 @@ El código de la aplicación está organizado de la siguiente manera:
 
 \subsubsection{diagrama de Paquetes}
 
-En esta subsección hacemos referencia a los anexos de Claudia Martínez Herrero. \cite{claudia:anexo}
+En esta subsección hacemos referencia a los anexos de Claudia Martínez Herrero \cite{claudia:anexo}.
 
 \subsubsection{Modelo vista controlador}
 
-En esta subsección hacemos referencia a los anexos de Claudia Martínez Herrero. \cite{claudia:anexo} añadiendo nueva formación a la tabla.
+En esta subsección hacemos referencia a los anexos de Claudia Martínez Herrero \cite{claudia:anexo} añadiendo nueva formación a la tabla.
 
 \tablaSmallSinColores{Relación MVC entre las clases y vistas}{|l | l | l | l |}{relacion-mvc-entre-las-clases-y-vistas}
 { \multicolumn{1}{|l }{} & Vista & Modelo & Controlador \\}{ 
