--- a/doc/proyectdoc/tex/D_Manual_programador.tex
+++ b/doc/proyectdoc/tex/D_Manual_programador.tex
@@ -143,11 +143,11 @@ Para importar nuestro proyecto deberemos abrir Eclipse. Una vez abierto deberemo
 
 \subsubsection{Build.gradle}\label{buildgradle}
 
-Build.gradle es el archivo donde debemos poner el tipo de aplicación que es, la versión y las dependencias necesarias de nuestro proyecto. \cite{gradle}
+Build.gradle es el archivo donde debemos poner el tipo de aplicación que es, la versión y las dependencias necesarias de nuestro proyecto \cite{gradle}.
 
 \subsubsection{Travis.yml}\label{travis-yml}
 
-Travis.yml es el archivo donde tenemos la configuración para la integración continua y el análisis de la calidad del código con SonarQube. \cite{web:travis,web:sonarqube}
+Travis.yml es el archivo donde tenemos la configuración para la integración continua y el análisis de la calidad del código con SonarQube \cite{web:travis,web:sonarqube}.
 
 \subsubsection{Generar .jar}\label{generar-jar}
 
