--- a/doc/proyectdoc/tex/3_Conceptos_teoricos.tex
+++ b/doc/proyectdoc/tex/3_Conceptos_teoricos.tex
@@ -1,6 +1,6 @@
 \capitulo{3}{Conceptos teóricos}
 
-Vamos a hablar de los conceptos teóricos aportando nueva información contando la información del tfg anterior de Claudia Martínez Herrero (página 6-13, año 2017). \cite{claudia}
+Vamos a hablar de los conceptos teóricos aportando nueva información contando la información del tfg anterior de Claudia Martínez Herrero (página 6-13, año 2017) \cite{claudia}.
 
 %\section{API Rest}\label{api-rest}
 
