Posicionamiento de imagenes en documentos. [#13]

--- a/doc/proyectdoc/bibliografia.bib
+++ b/doc/proyectdoc/bibliografia.bib
@@ -4,16 +4,14 @@
 	urldate = {2018-01-04}
 }
 @book{claudia,
-		title = {{Memoria tfg, 2017 }},
-	author    = "Martínez Herrero, Claudia"
-	title     = "Memoria tfg UBUGrades",
+	title = {{Memoria TFG UBUGrades }},
+	author    = "Martínez Herrero, Claudia",
 	year      = "2017"
 }
 
 @book{claudia:anexo,
-	title = {{Anexo tfg, 2017 }},
-	author    = "Martínez Herrero, Claudia"
-	title     = "Anexo tfg UBUGrades",
+	title = {{Anexo TFG UBUGrades }},
+	author    = "Martínez Herrero, Claudia",
 	year      = "2017"
 }
 
@@ -42,28 +40,13 @@
 	url = {https://www.mysql.com/products/workbench/},
 	urldate = {2017-12-04}
 }
-@misc{Web:sonarqube,
-	title = {{GII-17.1B-UBULog-1.0 - trona85}},
-	url = {https://sonarcloud.io/dashboard?id=GII-17.1B-UBULog-1.0},
-	urldate = {2017-12-03}
-}
 @misc{Web:texsturdio,
 	title = {{TeXstudio}},
 	url = {https://www.texstudio.org/},
 	urldate = {2017-12-03}
 }
-@misc{Web:eclipse,
-	title = {{Eclipse Neon}},
-	url = {https://www.eclipse.org/neon/},
-	urldate = {2017-12-03}
-}
 @misc{Web:zenhub,
-	title = {zenhub},
-	url = {https://www.zenhub.com/faq},
-	urldate = {2017-12-03}
-}
-@misc{Web:zenhub,
-	title = {zenhub},
+	title = {{ZenHub}},
 	url = {https://www.zenhub.com/faq},
 	urldate = {2017-12-03}
 }
@@ -74,7 +57,7 @@
 	urldate = {2017-12-03}
 }
 @misc{Web:texstudio,
-	title = {{TeXstudio}},
+	title = {{TexStudio}},
 	url = {https://www.texstudio.org/},
 	urldate = {2017-12-03}
 }
@@ -82,13 +65,14 @@
 	title = {{SonarQube - GII-17.1B-UBULog-1.0 - Oscar Fernández}},
 	url = {https://sonarcloud.io/dashboard?id=GII-17.1B-UBULog-1.0},
 	urldate = {2017-12-03}
-}@misc{web:github,
+}
+@misc{web:github,
 	title = {{GitHub}},
 	url = {https://github.com/trona85/GII-17.1B-UBULog-1.0},
 	year = {2017}
 }
 @misc{web:git,
-	title = {{Git - Documentation}},
+	title = {{Git - Documentati{\'{o}}n}},
 	url = {https://git-scm.com/doc},
 	urldate = {2017-12-03}
 }
@@ -120,7 +104,7 @@
 	url = {https://sonarcloud.io/dashboard?id=GII-17.1B-UBULog-1.0}
 }
 @misc{web:sublime,
-	title = {{Sublime Text 3 - IDE para javaScript y html}},
+	title = {{Sublime Text 3 - IDE para JavaScript y HTML}},
 	url = {https://www.sublimetext.com/3}
 }
 @misc{,
@@ -132,7 +116,7 @@
 	url = {https://docs.moodle.org/dev/Web{\_}service{\_}API{\_}functions}
 }
 @misc{javascript:chart,
-	title = {{Libreria para generar los graficos - Chart.js {\textperiodcentered} Cocumentaci{\'{o}}n}},
+	title = {{Librería para generar los gráficos - Chart.js {\textperiodcentered} Documentaci{\'{o}}n}},
 	url = {http://www.chartjs.org/docs/latest/}
 }
 @misc{java:calendar,
@@ -148,35 +132,35 @@
 	url = {https://moodle.net/stats/}
 }
 @book{LasaGomez2017,
-abstract = {Índices},
-author = {{Lasa Gómez}, Carmen and {Alvarez García}, Alonso and {de las Heras del Dedo}, Rafael},
-isbn = {9788441538887},
-publisher = {Anaya Multimedia},
-title = {{Métodos ágiles Scrum, Kanban, Lean}},
-year = {2017}
+	abstract = {Índices},
+	author = {{Lasa Gómez}, Carmen and {Alvarez García}, Alonso and {de las Heras del Dedo}, Rafael},
+	isbn = {9788441538887},
+	publisher = {Anaya Multimedia},
+	title = {{Métodos ágiles Scrum, Kanban, Lean}},
+	year = {2017}
 }
 @book{Schwaber2004,
-abstract = {Includes index. Foreword / Mike Cohn – Foreword / Mary Poppendieck – 1. Backdrop: The Science of Scrum – 2. New Management Responsibilities – 3. The ScrumMaster – 4. Bringing Order from Chaos – 5. The Product Owner – 6. Planning a Scrum Project – 7. Project Reporting – Keeping Everything Visible – 8. The Team – 9. Scaling Projects Using Scrum.},
-author = {Schwaber, Ken.},
-isbn = {073561993X},
-pages = {163},
-publisher = {Microsoft Press},
-title = {{Agile project management with Scrum}},
-year = {2004}
+	abstract = {Includes index. Foreword / Mike Cohn – Foreword / Mary Poppendieck – 1. Backdrop: The Science of Scrum – 2. New Management Responsibilities – 3. The ScrumMaster – 4. Bringing Order from Chaos – 5. The Product Owner – 6. Planning a Scrum Project – 7. Project Reporting – Keeping Everything Visible – 8. The Team – 9. Scaling Projects Using Scrum.},
+	author = {Schwaber, Ken.},
+	isbn = {073561993X},
+	pages = {163},
+	publisher = {Microsoft Press},
+	title = {{Agile project management with Scrum}},
+	year = {2004}
 }
 @book{,
-title = {{Resumen del libro Scrum, de Jeff Sutherland}},
-url = {https://www.leadersummaries.com/ver-resumen/scrum}
+	title = {{Resumen del libro Scrum, de Jeff Sutherland}},
+	url = {https://www.leadersummaries.com/ver-resumen/scrum}
 }
 @article{,
-journal = {Proyectos {\'{A}}giles},
-title = {{Beneficios de Scrum}},
-url = {http://www.proyectosagiles.org/beneficios-de-scrum},
-year = {2008}
+	journal = {Proyectos {\'{A}}giles},
+	title = {{Beneficios de Scrum}},
+	url = {http://www.proyectosagiles.org/beneficios-de-scrum},
+	year = {2008}
 }
 @article{art:mvc,
-keywords = {wiki},
-title = {{modelo vista controlador  — Wikipedia, La enciclopedia libre}},
-url = {https://es.wikipedia.org/wiki/Modelo–vista–controlador},
-year = {2017}
+	keywords = {wiki},
+	title = {{Modelo vista controlador  — Wikipedia, La enciclopedia libre}},
+	url = {https://es.wikipedia.org/wiki/Modelo–vista–controlador},
+	year = {2017}
 }
