--- a/doc/proyectdoc/bibliografiaAnexos.bib
+++ b/doc/proyectdoc/bibliografiaAnexos.bib
@@ -53,7 +53,7 @@
 	urldate = {2017-12-03}
 }
 @misc{Web:zenhub,
-	title = {ZenHub},
+	title = {{ZenHub}},
 	url = {https://www.zenhub.com/faq},
 	urldate = {2017-12-03}
 }
