--- a/doc/proyectdoc/anexos.tex
+++ b/doc/proyectdoc/anexos.tex
@@ -33,7 +33,7 @@
 % Imagenes
 \usepackage{graphicx}
 \newcommand{\imagen}[2]{
-	\begin{figure}[]
+	\begin{figure}[htbp]
 		\centering
 		\includegraphics[width=0.9\textwidth]{#1}
 		\caption{#2}\label{fig:#1}
@@ -345,9 +345,9 @@
 
 
 % Datos de portada
-\title{UBULog-1.1 \\Documentación Técnica}
+\title{UBULog-1.0 \\Documentación Técnica}
 \author{Oscar Fernández Armengol}
-\tutor{Raúl Marticorena Sánchez}
+\tutor{ Dr. Raúl Marticorena Sánchez}
 \date{\today}
 
 \begin{document}
